--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Add CSS and JS to Thymeleaf</title>
-    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css" />
+
 
 </head>
 <!--    <link rel="stylesheet" type="text/css" media="all"-->
@@ -22,7 +23,7 @@
     <header th:insert="blocks/header.html :: header"></header>
 
     <main>
-        <div th:class="header">
+        <div th:class="headerr">
 
             <h1 class="fw-light">Невеличка інструкція</h1>
             <a> Довідки про відсутність/наявність судимості</a>
@@ -42,15 +43,16 @@
                 <a href="#" class="btn btn-primary my-2">З пропозиціями звертайтесь до розробника - Климчука Олега</a>
                 <!--                        <a href="../printer/toppan" class="btn btn-secondary my-2">2</a>-->
             </p>
+
         </div>
                 </section>
 
                 <div class="album py-5 bg-light">
-                    <div >
+                    <div th:class="headerr">
                         <div >
 <!--                            <img src="/templates/static/imeges/ZHytomyr.png" alt="Bose logo">-->
-                            <img th:src="@{/static/imeges/zhytomyr.png}" alt="55"/>
-                            <img src="static/imeges/zhytomyr.png" alt="44"/>
+<!--                            <img th:src="@{/static/imeges/zhytomyr.png}" alt="55"/>-->
+<!--                            <img src="imeges/ZHytomyr.jpg" alt="44"/>-->
 <!--                            <img src="static/imeges/zhytomyr.png" alt="999"/>-->
                             ddddd
                         </div>
