Added new functionality for working with local data of the regional database.(Security)  24.08.2023 (NotSecyrity)

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -57,33 +57,13 @@
 
 
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-
-            <span class="fs-3">РСЦ ГСЦ МВС в Житомирській області.
-
-<!--                Today in Zhytomyr:-->
-<!--                <span-->
-<!--                    th:text="${#dates.format(standardDate, 'dd-MMMM-yyyy HH:mm')}">-->
-<!--                </span>-->
-
-            </span>
-
+            <span class="fs-3">РСЦ ГСЦ МВС в Житомирській області</span>
         </a>
 
         <nav class="d-inline-flex mt-0 mt-md-0 ms-md-auto">
+            <!--            <ul class="menu">-->
             <ul>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">About</a></li>
-
-<!--                                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>-->
-<!--                                    <ul class="submenu">-->
-<!--                                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>-->
-<!--                                        </li>-->
-<!--                                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan-add">Додати-->
-<!--                                            принтер</a></li>-->
-<!--                                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/Total_Count">Total-->
-<!--                                            Count</a></li>-->
-<!--                                    </ul>-->
-<!--                                </li>-->
-
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
                     <ul class="submenu2">
                         <li>
@@ -96,18 +76,19 @@
                         </li>
                     </ul>
                 </li>
-
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/searchAMT">Компан</a></li>
+<!--                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>-->
+<!--                    <ul class="submenu">-->
+<!--                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>-->
+<!--                        </li>-->
+<!--                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan-add">Додати-->
+<!--                            принтер</a></li>-->
+<!--                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/Total_Count">Total-->
+<!--                            Count</a></li>-->
+<!--                    </ul>-->
+<!--                </li>-->
 
-                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">АрешТ</a>
-                    <ul class="submenu">
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/arestupdate">Sync аррешт</a></li>
-
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Внести арешт</a></li>
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Зняти арешт</a></li>
-
-                    </ul>
-                </li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/arestupdate">Арест</a></li>
 
             </ul>
         </nav>
