--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"
+      xmlns:оБ="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!--    <head>-->
     <title>Історія && Арест АМТ</title>
     <link rel="stylesheet" th:href="@{css/login_css.css}">
+    <!--    </head>-->
 
     <title>Історія && Арест </title>
 
@@ -124,6 +126,7 @@
                 <p> Вл. маса: <b th:text="${AmtHyst.getMasa1}?:''"> </b></p>
                 <p> Пов.маса: <b th:text="${AmtHyst.getMasa}?:''"> </b></p>
                 <p> Місць: <b th:text="${AmtHyst.getPlace}?:''"> </b></p>
+
             </td>
 
             <td id="col_3">
