--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -23,48 +23,49 @@
     <header th:insert="blocks/header.html :: header"></header>
 
     <main>
-        <div th:class="headerr">
+        <section>
+        <div th:class="header">
 
-            <h1 class="fw-light">Невеличка інструкція</h1>
-            <a> Довідки про відсутність/наявність судимості</a>
-            <a>1. Довідки щоденні :</a>
-            <h5> - при відкритті цієї сторінки автоматично виконується пошук з початку тижня по день відкритя сторінки
-                Вашого ТСЦ.</h5>
-            <h5> - якщо внесено помилкові данні потрібно лівою кнопкою миші клацнути на заголовку помилково внесеного дня
-                відкриється вікно для корегування.</h5>
-            <h5> За необхідності відкорегували та зберегти зміни. Відкорегована інформація відразу відобразиться.</h5>
-            <h5>2. Для формування тижневого звіту в пошуковому вікні вибрати своє ТСЦ, вказати період формування звіту
-                та натиснути "Формування та друк тижневого звіту"</h5>
-            <h5> На Вашу електронну адресу прийде сформований звіт.</h5>
-            <h5>2. Звіт щоденний - заповнюється щодня, підрозділ ТСЦ та дата вноситься автоматично, є можливість змінити
-                дату </h5>
-            <h5 class="lead text-muted"> .</h5>
-            <p>
-                <a href="#" class="btn btn-primary my-2">З пропозиціями звертайтесь до розробника - Климчука Олега</a>
-                <!--                        <a href="../printer/toppan" class="btn btn-secondary my-2">2</a>-->
-            </p>
+<!--            <h1 class="fw-light">Невеличка інструкція</h1>-->
+<!--            <a> Довідки про відсутність/наявність судимості</a>-->
+<!--            <a>1. Довідки щоденні :</a>-->
+<!--            <h5> - при відкритті цієї сторінки автоматично виконується пошук з початку тижня по день відкритя сторінки-->
+<!--                Вашого ТСЦ.</h5>-->
+<!--            <h5> - якщо внесено помилкові данні потрібно лівою кнопкою миші клацнути на заголовку помилково внесеного дня-->
+<!--                відкриється вікно для корегування.</h5>-->
+<!--            <h5> За необхідності відкорегували та зберегти зміни. Відкорегована інформація відразу відобразиться.</h5>-->
+<!--            <h5>2. Для формування тижневого звіту в пошуковому вікні вибрати своє ТСЦ, вказати період формування звіту-->
+<!--                та натиснути "Формування та друк тижневого звіту"</h5>-->
+<!--            <h5> На Вашу електронну адресу прийде сформований звіт.</h5>-->
+<!--            <h5>2. Звіт щоденний - заповнюється щодня, підрозділ ТСЦ та дата вноситься автоматично, є можливість змінити-->
+<!--                дату </h5>-->
+<!--            <h5 class="lead text-muted"> .</h5>-->
+<!--            <p>-->
+<!--                <a href="#" class="btn btn-primary my-2">З пропозиціями звертайтесь до розробника - Климчука Олега</a>-->
+<!--                &lt;!&ndash;                        <a href="../printer/toppan" class="btn btn-secondary my-2">2</a>&ndash;&gt;-->
+<!--            </p>-->
 
         </div>
                 </section>
+<!--        <section>-->
+<!--            <div class="album py-5 bg-light">-->
+<!--                <div >-->
+<!--                    <div >-->
+<!--                        &lt;!&ndash;                            <img src="/templates/static/imeges/ZHytomyr.png" alt="Bose logo">&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            <img th:src="@{/static/imeges/zhytomyr.png}" alt="55"/>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            <img src="imeges/ZHytomyr.jpg" alt="44"/>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            <img src="static/imeges/zhytomyr.png" alt="999"/>&ndash;&gt;-->
+<!--                    </div>-->
 
-                <div class="album py-5 bg-light">
-                    <div th:class="headerr">
-                        <div >
-<!--                            <img src="/templates/static/imeges/ZHytomyr.png" alt="Bose logo">-->
-<!--                            <img th:src="@{/static/imeges/zhytomyr.png}" alt="55"/>-->
-<!--                            <img src="imeges/ZHytomyr.jpg" alt="44"/>-->
-<!--                            <img src="static/imeges/zhytomyr.png" alt="999"/>-->
-                            ddddd
-                        </div>
+<!--                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">-->
 
-                        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+<!--                    </div>-->
 
-                        </div>
-
-                        <textarea> qwww</textarea>
-                        <h1 class="fw-light">ШО то тут тоже нарисуем .. потом</h1>
-                    </div>
-                </div>
+<!--                    <textarea> Write text ..</textarea>-->
+<!--                    <h1 class="fw-light">ШО то тут тоже нарисуем .. потом</h1>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>-->
 
     </main>
     <div th:insert="blocks/footer.html :: footer"></div>
